 * Fix: Restore normal layer view mode when loading a canvas into the same window.
 * Fix: Replace the notification sound playback backend, which should make it work on Android, the Linux AppImage and on 32 bit Windows. It should hopefully also no longer have occasional crashes on some Linux and Windows systems.

2025-03-26 Version 2.2.2
 * Fix: Make annotations not cause glitches when moving them around when using the software renderer. Thanks Meru for reporting.
 * Feature: Add -u/--users parameter to dprectool, which will print out a table of user statistics along with names and ids.
 * Feature: Add --include-user-ids parameter to dprectool, allowing to pass a comma-separated list of user ids to only include visual changes from.
 * Fix: Work around WebKit bug 284752 that prevents Drawpile from working on Safari 18. Thanks grimsley for reporting.
 * Fix: Correct weird letter spacing in the font rendering on Windows. Thanks Sinamer for reporting.
 * Feature: Make reset images a bit smaller and much faster. This speeds up manual session resets, canvas compression, hosting and joins in the builtin server. Thanks mukihyena for reporting.
 * Fix: Generate the catchup image in the background when hosting on the builtin server, rather than hanging the client. Thanks mukihyena for reporting.
 * Server Fix: Additional checks and logging to avoid and diagnose temporary failures in streamed resets. Thanks Will for reporting.
 * Fix: Slightly delay restoring dock layouts after the window is resized to avoid a crash on macOS. Thanks Axocrat for reporting.
 * Fix: Properly update the checkbox on View > Full Screen if the OS forces the application out of it. Thanks Sinamer for reporting.
 * Fix: Restore window maximized after exiting the application from full screen mode. Thanks Sinamer for reporting.
 * Fix: Only remember dock sizes when the window is maximized or full screen on operating systems where that's possible to tell. Thanks Meiren for reporting.